man default_encoders
This commit imports debian patch "98_man_default_encoders.patch".

Mention the default of the --encoders option in the man page.

--- a/jack.man
+++ b/jack.man
@@ -161,7 +161,7 @@ use which encoder (default "oggenc")
 .B \-e, \-\-encoders int
 encode how many files in parallel. If you have a SMP machine or
 simply want to stress your system, you can have Jack encode
-several files at once.
+several files at once (default 1).
 .TP
 .B \-x, \-\-exec
 run predefined command when finished.
